# obsidian-alphaxiv-workflow

./: .gitignore  SKILL.md  pyproject.toml
agents/: openai.yaml
alphaxiv_workflow/: __init__.py  api.py  backfill.py  build.py  config.py  fetch_hot.py  fetch_recommend.py  fixups.py  import_papers.py  note_builder.py  query_parser.py  search.py  synthesis.py  trigger.py  unify.py  validate.py  venue.py
references/: backfill-overviews.md  build-note.md  known-pitfalls.md  literature-synthesis.md  note-schema.md  research-plan-output.md  research-plan.md  search-and-disambiguate.md  validate-import.md
scripts/: add_missing_sections.py  alphaxiv_client.py  alphaxiv_to_obsidian.py  backfill_overviews.py  batch_from_json.py  batch_import.py  config.py  fix_placeholder_citations.py  fix_quotes.py  gate1_search.py  literature_analyzer.py  note_builder.py  parallel_batch_import.py  publication_rank.py  pw_batch_trigger.py  unify_structure.py  validator.py
scripts/maintenance/: batch_add_summary.py  fix_duplicate_summaries.py
skills/01-search-disambiguate/: SKILL.md
skills/02-build-note/: SKILL.md
skills/03-validate-import/: SKILL.md
skills/04-literature-synthesis/: SKILL.md
skills/05-backfill-overviews/: SKILL.md
skills/backfill-overviews/: SKILL.md
tests/: test_alphaxiv_client.py  test_backfill.py  test_backfill_overviews.py  test_gate1_search.py  test_literature_analyzer.py  test_literature_synthesis.py  test_note_builder.py  test_search.py  test_skill_structure.py  test_synthesis.py  test_unify.py  test_validate.py  test_validator.py
(+3 files in other folders)
